Set Icon depending on load status of lively. Currently, loading into https is not possible, so it is set to inactive in those cases. Move loadPart into Chrome extension and out of lively-core.

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "default_icon": "media/icon-active.png",
     "default_popup": "static/popup.html"
   },
+  "background": {
+    "scripts": ["scripts/background.js"]
+  },
   "permissions": [
     "tabs", "activeTab", "http://*/*", "https://*/*"
   ],
