--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
     "scripts": ["scripts/background.js"]
   },
   "permissions": [
-    "tabs", "activeTab", "http://*/*", "https://*/*"
+    "tabs", "activeTab", "http://*/*", "https://*/*", "storage"
   ],
   "content_scripts": [{
     "js": [ "libs/jquery.min.js" ],
