--- a/manifest.json
+++ b/manifest.json
@@ -3,13 +3,13 @@
 
   "name": "Lively4 Loader",
   "description": "Loads the Lively 4 system into any website",
-  "version": "0.2.1",
+  "version": "0.2.3",
   "browser_action": {
     "default_icon": "background/media/icon-active.png",
     "default_popup": "ui/popup.html"
   },
   "background": {
-    "scripts": ["background/configs.js", "background/eventPage.js"],
+    "scripts": ["configs.js", "background/eventPage.js"],
     "persistent": false
   },
   "permissions": [
